--- a/AzureFunctions.AngularClient/AzureFunctions.AngularClient.csproj
+++ b/AzureFunctions.AngularClient/AzureFunctions.AngularClient.csproj
@@ -104,6 +104,7 @@
     <None Include="src\app\copy-pre\copy-pre.component.scss" />
     <Content Include="src\app\controls\click-to-edit\click-to-edit.component.html" />
     <Content Include="src\app\controls\command-bar\command\command.component.html" />
+    <Content Include="src\app\controls\info-box\info-box.component.html" />
     <Content Include="src\app\controls\textbox\textbox.component.html" />
     <Content Include="src\app\controls\slide-toggle\slide-toggle.component.html" />
     <Content Include="src\app\copy-pre\copy-pre.component.css" />
@@ -125,6 +126,7 @@
     <Content Include="src\app\create-function-wrapper\create-function-wrapper.component.scss" />
     <Content Include="src\app\controls\click-to-edit\click-to-edit.component.scss" />
     <Content Include="src\app\controls\command-bar\command\command.component.scss" />
+    <Content Include="src\app\controls\info-box\info-box.component.scss" />
     <Content Include="src\app\controls\slide-toggle\slide-toggle.component.scss" />
     <Content Include="src\app\controls\textbox\textbox.component.scss" />
     <Content Include="src\app\edit-mode-warning\edit-mode-warning.component.scss" />
@@ -401,6 +403,7 @@
     <TypeScriptCompile Include="src\app\controls\command-bar\command-bar.component.ts" />
     <TypeScriptCompile Include="src\app\controls\command-bar\command\command.component.spec.ts" />
     <TypeScriptCompile Include="src\app\controls\command-bar\command\command.component.ts" />
+    <TypeScriptCompile Include="src\app\controls\info-box\info-box.component.ts" />
     <TypeScriptCompile Include="src\app\controls\pair-list\pair-list.component.spec.ts" />
     <TypeScriptCompile Include="src\app\controls\pair-list\pair-list.component.ts" />
     <TypeScriptCompile Include="src\app\controls\slide-toggle\slide-toggle.component.spec.ts" />
